tasks/rulegen/src/snapshots/rulegen__tests__rulegen_jest_no_large_snapshots.snap
---
source: tasks/rulegen/src/main.rs
expression: rendered
---
use oxc_diagnostics::OxcDiagnostic;
use oxc_macros::declare_oxc_lint;
use oxc_span::Span;
use rustc_hash::FxHashMap;
use schemars::JsonSchema;
use serde::{Deserialize, Serialize};

use crate::{
    context::LintContext,
    fixer::{RuleFix, RuleFixer},
    rule::{DefaultRuleConfig, Rule},
    AstNode,
};

fn no_large_snapshots_diagnostic(span: Span) -> OxcDiagnostic {
    // See <https://oxc.rs/docs/contribute/linter/adding-rules.html#diagnostics> for details
    OxcDiagnostic::warn("Should be an imperative statement about what is wrong.")
        .with_help("Should be a command-like statement that tells the user how to fix the issue.")
        .with_label(span)
}


#[derive(Debug, Default, Clone, Serialize, Deserialize, JsonSchema)]
#[serde(rename_all = "camelCase", default)]
struct NoLargeSnapshotsConfig {
    /// FIXME: Describe the purpose of this field.
    inline_max_size: f32,
    /// FIXME: Describe the purpose of this field.
    max_size: f32,
    /// FIXME: Describe the purpose of this field.
    allowed_snapshots: FxHashMap<String, Vec<String>>,
}




#[derive(Debug, Default, Clone, Deserialize, Serialize, JsonSchema)]
pub struct NoLargeSnapshots(NoLargeSnapshotsConfig);

// See <https://github.com/oxc-project/oxc/issues/6050> for documentation details.
declare_oxc_lint!(
    /// ### What it does
    ///
    /// Briefly describe the rule's purpose.
    ///
    /// ### Why is this bad?
    ///
    /// Explain why violating this rule is problematic.
    ///
    /// ### Examples
    ///
    /// Examples of **incorrect** code for this rule:
    /// ```ts
    /// FIXME: Tests will fail if examples are missing or syntactically incorrect.
    /// ```
    ///
    /// Examples of **correct** code for this rule:
    /// ```ts
    /// FIXME: Tests will fail if examples are missing or syntactically incorrect.
    /// ```
    NoLargeSnapshots,
    jest,
    nursery, // TODO: change category to `correctness`, `suspicious`, `pedantic`, `perf`, `restriction`, or `style`
             // See <https://oxc.rs/docs/contribute/linter.html#rule-category> for details
    pending, // TODO: describe fix capabilities. Remove if no fix can be done,
             // keep at 'pending' if you think one could be added but don't know how.
             // Options are 'fix', 'fix_dangerous', 'suggestion', and 'conditional_fix_suggestion'
    config = NoLargeSnapshotsConfig,
);

impl Rule for NoLargeSnapshots {
    fn from_configuration(value: serde_json::Value) -> Result<Self, serde_json::error::Error> {
        Ok(serde_json::from_value::<DefaultRuleConfig<Self>>(value).unwrap_or_default().into_inner())
    }

    fn run<'a>(&self, node: &AstNode<'a>, ctx: &LintContext<'a>) {

    }
}

#[test]
fn test() {
    use crate::tester::Tester;
    use std::path::PathBuf;

    let pass = vec![
        ("expect(something)", None, None, None),
("expect(something).toBe(1)", None, None, None),
("expect(something).toMatchInlineSnapshot", None, None, None),
("expect(something).toMatchInlineSnapshot()", None, None, None),
("expect(
			  functionUnderTest(
			    arg1,
			    arg2,
			    arg3
			  )
			).toMatchInlineSnapshot(", Some(serde_json::json!([ { "maxSize": 61, }, ])), None, Some(PathBuf::from("mock.jsx")))
    ];

    let fail = vec![
        
    ];

    Tester::new(NoLargeSnapshots::NAME, NoLargeSnapshots::PLUGIN, pass, fail).test_and_snapshot();
}
